Fixed tags overflow and added custom colors on tags

--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -25,7 +25,8 @@
   display: flex;
   justify-content: flex-start;
   width: 100%;
-  margin: 0.5em 0 0.3em 0;
+  margin-top: 8px;
+  flex-wrap: wrap;
 }
 
 .tag-wrapper {
@@ -33,12 +34,11 @@
   justify-content: center;
   align-items: center;
   padding: 2px 8px 2px 8px;
-  margin: 0 2px 0 2px;
+  margin: 0 2px 4px 2px;
   border-radius: 0.25em;
   color: #ffffff;
   font-size: 0.9em;
   font-weight: 700;
-  background-color: #3da2d1;
 }
 
 .tag-button {
